--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 tungstenite = "0.13.0"
 openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
