--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,2 @@
-[package]
-name = "lotus"
-version = "0.1.0"
-authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-tungstenite = "0.13.0"
-openssl = { version = "0.10", features = ["vendored"] }
-rand = "0.8"
-serde = { version = "1.0", features = ["derive"] }
-bincode = "1.3"
+[workspace]
+members = ["common", "client", "server", "serializable_derive"]
