--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,3 +11,6 @@ path = "src/lib.rs"
 [dependencies]
 lotus-common = { path = "../common" }
 wasm-bindgen = "0.2"
+
+# [profile.release]
+# lto = true
