--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 [dependencies]
 lotus-serializable-derive = { path = "../serializable_derive" }
 rand = "0.8"
-# wasm-bindgen = "0.2"
+wasm-bindgen = "0.2"
 getrandom = { version = "0.2", features = ["js"] }
