Add macro to represent enums as strings.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["common", "client", "server", "serializable_derive"]
+members = ["common", "client", "server", "serializable-derive", "as-js-string-macro"]
