--- a/as-js-string-macro/Cargo.toml
+++ b/as-js-string-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lotus-serializable-derive"
+name = "as-js-string-macro"
 version = "0.1.0"
 authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
 edition = "2018"
@@ -10,3 +10,4 @@ proc-macro = true
 [dependencies]
 syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
+proc-macro2 = "1.0.27"
