--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-lotus-serializable-derive = { path = "../serializable_derive" }
+lotus-serializable-derive = { path = "../serializable-derive" }
 lotus-common = { path = "../common" }
 tungstenite = "0.13.0"
 openssl = { version = "0.10", features = ["vendored"] }
