--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/lib.rs"
 [dependencies]
 lotus-common = { path = "../common" }
 wasm-bindgen = "0.2"
+js-sys = "0.3"
 
 # [profile.release]
 # lto = true
