--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-lotus-serializable-derive = { path = "../serializable_derive" }
+lotus-serializable-derive = { path = "../serializable-derive" }
+as-js-string-macro = { path = "../as-js-string-macro" }
 rand = "0.8"
 wasm-bindgen = "0.2"
+js-sys = "0.3"
 getrandom = { version = "0.2", features = ["js"] }
