--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "lotus-common"
 version = "0.1.0"
-authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-lotus-serializable-derive = { path = "../serializable-derive" }
-as-js-string-macro = { path = "../as-js-string-macro" }
+lotus-serializable-macro = { path = "../serializable-macro" }
+lotus-as-js-string-macro = { path = "../as-js-string-macro" }
 rand = "0.8"
 wasm-bindgen = "0.2"
 js-sys = "0.3"
