--- a/parsable/Cargo.toml
+++ b/parsable/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 [dependencies]
 lotus-parsable-macro = { path = "../parsable-macro" }
 regex = "1"
+line-col = "0.2"
+backtrace = "0.3"
