--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 lotus-common = { path = "./common" }
 lotus-client = { path = "./client" }
 lotus-server = { path = "./server" }
+lotus-serializable = { path = "./serializable" }
 lotus-serializable-macro = { path = "./serializable-macro" }
 lotus-as-js-string-macro = { path = "./as-js-string-macro" }
 lotus-parser = { path = "./parser" }
