--- a/enum-as-string-macro/Cargo.toml
+++ b/enum-as-string-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "as-js-string-macro"
+name = "enum-as-string-macro"
 version = "0.1.0"
 edition = "2018"
 
@@ -10,3 +10,4 @@ proc-macro = true
 syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
+proc-macro-error = "1.0"
