--- a/lotus-framework/Cargo.toml
+++ b/lotus-framework/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 [dependencies]
 serializable = { path = "../serializable" }
 serializable-macro = { path = "../serializable-macro" }
-as-js-string-macro = { path = "../as-js-string-macro" }
+enum-as-string-macro = { path = "../enum-as-string-macro" }
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 rand = "0.8"
