--- a/lotus-parser/Cargo.toml
+++ b/lotus-parser/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+colored = "2"
 lotus-framework = { path = "../lotus-framework" }
 parsable = { path = "../parsable" }
 enum-as-string-macro = { path = "../enum-as-string-macro" }
