--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "lotus-framework/js/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --experimental-wasi-unstable-preview1 --experimental-specifier-resolution=node scripts/run-all-tests.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/anovs/lotus/issues"
   },
-  "homepage": "https://github.com/anovs/lotus#readme"
+  "homepage": "https://github.com/anovs/lotus#readme",
+  "devDependencies": {
+    "mocha": "^9.0.3"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2"
+  }
 }
