--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/anovs/lotus#readme",
   "devDependencies": {
+    "fs-extra": "^10.0.0",
     "mocha": "^9.0.3"
   },
   "dependencies": {
