--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [workspace]
 
 [dependencies]
-lotus-framework = { path = "./lotus-framework" }
+lotus-framework = { path = "./framework" }
 lotus-parser = { path = "./lotus-parser" }
 serializable = { path = "./serializable" }
 serializable-macro = { path = "./serializable-macro" }
