--- a/lotus-compiler/package.json
+++ b/lotus-compiler/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "lotus",
+  "name": "lotus-compiler",
   "version": "0.1.0",
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "scripts/npm-test.sh"
+    "test": "node --experimental-specifier-resolution=node run-test.js all"
   },
   "repository": {
     "type": "git",
@@ -17,10 +17,8 @@
   },
   "homepage": "https://github.com/symil/lotus#readme",
   "devDependencies": {
+    "chalk": "^4.1.2",
     "fs-extra": "^10.0.0",
     "mocha": "^9.0.3"
-  },
-  "dependencies": {
-    "chalk": "^4.1.2"
   }
 }
