--- a/lotus-cli/package.json
+++ b/lotus-cli/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
+    "esbuild": "^0.13.14",
+    "esbuild-plugin-wasm": "^1.0.0",
+    "express": "^4.17.1",
     "unfold-js": "file:../../unfold-js"
   }
 }
