--- a/lotus-cli/package.json
+++ b/lotus-cli/package.json
@@ -13,7 +13,6 @@
     "chalk": "^4.1.2",
     "esbuild": "^0.13.14",
     "esbuild-plugin-wasm": "^1.0.0",
-    "express": "^4.17.1",
-    "unfold-js": "file:../../unfold-js"
+    "express": "^4.17.1"
   }
 }
