--- a/game-test/lotus.toml
+++ b/game-test/lotus.toml
@@ -3,3 +3,4 @@ framework = true
 title = "Some game"
 port = 33902
 remote = "az@ytawo.eu:221"
+spreadsheet-url = "https://docs.google.com/spreadsheets/d/1rhdJpMTqJoVy5nU6hv0dAwvjFUvQjjijS4oa_OeTRII"
