--- a/lotus-compiler/package.json
+++ b/lotus-compiler/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "fs-extra": "^10.0.0",
+    "googleapis": "^39.2.0",
     "toml": "^3.0.0"
   }
 }
