--- a/lotus-compiler/package.json
+++ b/lotus-compiler/package.json
@@ -26,7 +26,7 @@
     "chalk": "^5.0.1",
     "fs-extra": "^10.1.0",
     "googleapis": "^105.0.0",
-    "outpost": "file:../../outpost",
+    "outpost": "git@github.com:symil/outpost.git#v0.4",
     "toml": "^3.0.0"
   }
 }
