--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "homepage": "https://github.com/symil/lotus#readme",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
-    "mocha": "^9.2.2"
+    "@types/mocha": "^10.0.9",
+    "@types/ws": "^8.5.12",
+    "esbuild": "^0.24.0",
+    "express": "^4.21.1",
+    "mocha": "^9.2.2",
+    "ws": "^8.18.0"
   },
   "dependencies": {
     "chalk": "^5.3.0",
