--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "bin": {
-    "lotus-cli": "./scripts/run-cli.js"
+    "lotus": "./scripts/build-app.js"
   },
   "scripts": {
     "test": "node scripts/run-test.js --all"
@@ -19,6 +19,11 @@
     "url": "https://github.com/symil/lotus/issues"
   },
   "homepage": "https://github.com/symil/lotus#readme",
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "fs-extra": "^10.1.0",
+    "toml": "^3.0.0"
+  },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
@@ -28,10 +33,5 @@
     "express": "^4.21.1",
     "mocha": "^9.2.2",
     "ws": "^8.18.0"
-  },
-  "dependencies": {
-    "chalk": "^5.3.0",
-    "fs-extra": "^10.1.0",
-    "toml": "^3.0.0"
   }
 }
