--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "fs-extra": "^10.1.0",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "wabt": "^1.0.36"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
