Fix to use latest stable release.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ colored = "=2.0.0"
 indexmap = "=1.7.0"
 enum-iterator = "=0.7.0"
 toml = "=0.5.8"
-parsable = "=0.1.4"
+parsable = { path = "../parsable" }
