--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lotus": "./scripts/build-app.js"
   },
   "scripts": {
-    "test": "node scripts/run-test.js --all"
+    "test": "node scripts/run-test.js --all",
+    "fullinstall": "node scripts/fullinstall.js"
   },
   "repository": {
     "type": "git",
